2007-01-22  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportUtils.py: Add function "get_address_str"
	* src/plugins/DetDescendantReport.py: Add addresses (0000791)
	* src/plugins/DetAncestralReport.py: Add addresses (0000791)
	* src/plugins/IndivComplete.py: Add addresses (0000791)
	* src/plugins/NarrativeWeb.py: use "get_address_str"
	* src/plugins/FamilyGroup.py: use "get_address_str"

2007-01-22  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: import of gramps package
	* src/ArgHandler.py: import of gramps package
	* src/GrampsDb/_ReadGedcom.py: catch bad LDS ords

2007-01-22  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ArgHandler.py,
	* src/DbLoader.py: Print out more precise error messages when trying
	to open gpkg or geneweb files.
	* src/GrampsDb/_ReadGedcom.py (func_repo_addr): Properly parse address

2007-01-21  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDBCallback.py: sys.getfilesystemencoding()
	* src/GrampsDb/_GrampsBSDDB.py: sys.getfilesystemencoding()
	* src/Exporter.py: sys.getfilesystemencoding()
	* src/ReportBase/_FileEntry.py: sys.getfilesystemencoding()
	* src/Editors/_EditMedia.py: sys.getfilesystemencoding()
	* src/DisplayTabs/_SourceEmbedList.py: sys.getfilesystemencoding()
	* src/plugins/WriteCD.py: sys.getfilesystemencoding()
	* src/plugins/WritePkg.py: sys.getfilesystemencoding()
	* src/plugins/Check.py: sys.getfilesystemencoding()
	* src/plugins/EventCmp.py: sys.getfilesystemencoding()
	* src/AddMedia.py: sys.getfilesystemencoding()
	* src/DisplayModels/_BaseModel.py: sys.getfilesystemencoding()
	* src/DateEdit.py: sys.getfilesystemencoding()
	* src/ArgHandler.py: sys.getfilesystemencoding()
	* src/DbLoader.py: sys.getfilesystemencoding()
	* src/GrampsDb/_GrampsBSDDB.py: catch exceptions
	* src/DisplayState.py: catch exceptions
	* src/DbLoader.py: catch exceptions (DbLoader.read_file): catch exception
	* src/Filters/SideBar/_SidebarFilter.py: add tooltips for dates