@@ -1,3 +1,7 @@
+2007-01-22  Douglas Blank  <dblank@cs.brynmawr.edu>
+	* src/plugins/Calendar.py: 0000858: Patch for calendar enhancements and new
+	  Birthday Report
+
 2007-01-22  Brian Matherly  <brian@gramps-project.org>
 	* src/ReportBase/_ReportUtils.py: Add function "get_address_str"
 	* src/plugins/DetDescendantReport.py: Add addresses (0000791)
